--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "styled-components": "^5.3.6"
   },
   "devDependencies": {
+    "@types/node": "^18.11.19",
     "@types/react": "^18.0.27",
     "@types/react-dom": "^18.0.10",
     "@types/styled-components": "^5.1.26",
@@ -27,7 +28,6 @@
     "eslint-plugin-react": "^7.32.2",
     "prettier": "^2.8.3",
     "typescript": "^4.9.3",
-    "vite": "^4.1.0",
-    "vite-tsconfig-paths": "^4.0.5"
+    "vite": "^4.1.0"
   }
 }
