--- a/package.json
+++ b/package.json
@@ -26,8 +26,12 @@
     "eslint-config-prettier": "^8.6.0",
     "eslint-plugin-prettier": "^4.2.1",
     "eslint-plugin-react": "^7.32.2",
+    "msw": "^1.0.0",
     "prettier": "^2.8.3",
     "typescript": "^4.9.3",
     "vite": "^4.1.0"
+  },
+  "msw": {
+    "workerDirectory": "public"
   }
 }
