--- a/package.json
+++ b/package.json
@@ -32,7 +32,8 @@
     "msw": "^1.0.0",
     "prettier": "^2.8.3",
     "typescript": "^4.9.3",
-    "vite": "^4.1.0"
+    "vite": "^4.1.0",
+    "vite-plugin-svgr": "^2.4.0"
   },
   "msw": {
     "workerDirectory": "public"
