--- a/netlify.toml
+++ b/netlify.toml
@@ -1,5 +1,4 @@
-{
-  "scripts": {
-		"build": "tsc && vite build && echo '/* /index.html 200' | cat > dist/_redirects",
-    },
-}
+[[redirects]]
+  from = "/*"
+  to = "/index.html"
+  status = 200
