--- a/package.json
+++ b/package.json
@@ -41,7 +41,8 @@
     "eslint-plugin-prettier": "^4.2.1",
     "eslint-plugin-react": "^7.32.2",
     "eslint-plugin-storybook": "^0.6.11",
-    "msw": "^1.0.0",
+    "msw": "^1.1.0",
+    "msw-storybook-addon": "^1.8.0",
     "prettier": "^2.8.3",
     "typescript": "^4.9.3",
     "vite": "^4.1.0",
