--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "@reduxjs/toolkit": "^1.9.2",
     "@tanstack/react-query": "^4.24.6",
+    "axios": "^1.3.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-redux": "^8.0.5",
@@ -22,11 +23,11 @@
   "devDependencies": {
     "@babel/core": "^7.21.0",
     "@storybook/addon-actions": "^6.5.16",
-    "@storybook/addon-essentials": "^6.5.16",
+    "@storybook/addon-essentials": "^6.4.22",
     "@storybook/addon-interactions": "^6.5.16",
     "@storybook/addon-links": "^6.5.16",
-    "@storybook/builder-vite": "^0.4.2",
-    "@storybook/react": "^6.5.16",
+    "@storybook/builder-vite": "^0.1.37",
+    "@storybook/react": "^6.1.21",
     "@storybook/testing-library": "^0.0.13",
     "@types/node": "^18.11.19",
     "@types/react": "^18.0.27",
@@ -41,7 +42,7 @@
     "eslint-plugin-prettier": "^4.2.1",
     "eslint-plugin-react": "^7.32.2",
     "eslint-plugin-storybook": "^0.6.11",
-    "msw": "^1.1.0",
+    "msw": "^1.2.1",
     "msw-storybook-addon": "^1.8.0",
     "prettier": "^2.8.3",
     "typescript": "^4.9.3",
